<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.torvikcastroo.calculadorajy.principal">

    <LinearLayout
        android:layout_width="373dp"
        android:layout_height="488dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="11dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/material"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/spn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dije"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/spn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baño"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/spn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Escoge tipo de moneda"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/spn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="7dp" />

        <EditText
            android:id="@+id/Txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Digite cantidad..."
            android:inputType="number"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="34dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bttnCalcular"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calcular"
                android:text="@string/calcular" />

            <Button
                android:id="@+id/bttnBorrar"
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="borrar"
                android:text="@string/borrar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_weight="1.05"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.16"
                android:text="@string/unitario"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/lblUnidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/valor"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/lblResultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.16" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
